; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_branch.c_git_branch_create.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_branch.c_git_branch_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_branch_create(i32** %0, i32* %1, i8* %2, i32* %3, i32 %4) #0 {
  %6 = alloca i32**, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store i32** %0, i32*** %6, align 8
  store i32* %1, i32** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32 %4, i32* %10, align 4
  %11 = load i32**, i32*** %6, align 8
  %12 = load i32*, i32** %7, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = load i32*, i32** %9, align 8
  %15 = load i32*, i32** %9, align 8
  %16 = call i32 @git_commit_id(i32* %15)
  %17 = call i32 @git_oid_tostr_s(i32 %16)
  %18 = load i32, i32* %10, align 4
  %19 = call i32 @create_branch(i32** %11, i32* %12, i8* %13, i32* %14, i32 %17, i32 %18)
  ret i32 %19
}

declare dso_local i32 @create_branch(i32**, i32*, i8*, i32*, i32, i32) #1

declare dso_local i32 @git_oid_tostr_s(i32) #1

declare dso_local i32 @git_commit_id(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
